--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <nav>
-            <img src="../img/Mascotas.png" alt="logo">
+            <img src="img/Mascotas.png" alt="logo">
             <a href="inicio.html">Inicio</a>
             <a href="catalogo.html">Catalogo</a>
             <a href="historia.html">Historia</a>
