--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
     <nav>
             <img src="img/Mascotas.png" alt="logo">
-            <a href="inicio.html">Inicio</a>
-            <a href="catalogo.html">Catalogo</a>
-            <a href="historia.html">Historia</a>
+            <a href="./page/inicio.html">Inicio</a>
+            <a href="./page/catalogo.html">Catalogo</a>
+            <a href="./page/historia.html">Historia</a>
             <a href="#">Certificaciones</a>
             <a href="#">Contactanos</a>
     </nav>
